@@ -1,3 +1,8 @@
+2010-11-03  Alan Modra  <amodra@gmail.com>
+
+	* Makefile.am (eelf64hppa.c): Correct dependencies.
+	* Makefile.in: Regenerate.
+
 2010-11-02  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* scripttempl/armbpabi.sc: Include compressed DWARF debug
